resources/after/keptn/fd-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
  name: dev
  namespace: keptn
spec:
  rules:
  - http:
      paths:
      - backend:
          service:
            name: api-gateway-nginx
            port:
              number: 80
        path: /
        pathType: Prefix
